[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-consistency"
version = "0.1.0"
description = "批量检查长篇文档一致性的命令行工具"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Writing Team Tools" }]
keywords = ["document", "consistency", "checker", "writing", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-frontmatter>=1.0.0",
]

[project.scripts]
doccheck = "doccheck.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["doccheck*"]
